@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.190 2004/06/06 16:37:53 schmonz Exp $
+# $NetBSD: Makefile,v 1.191 2004/06/25 19:03:26 hubertf Exp $
 #
 
-DISTNAME=	pkglint-3.77
+DISTNAME=	pkglint-3.78
 CATEGORIES=	pkgtools devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
